# ase-python

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_PYPI.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: certify.yml  publish-pypi.yml
constraints/: py311.txt
docs/: README.md  architecture-boundaries.md  build-an-adapter.md  certify-a-framework.md  ci-cd.md  compatibility-matrix.md  compatibility-policy.md  example-workflows.md  how-ase-works.md  interoperability.md  release-checklist.md  releasing.md  setup.md  what-ase-certifies.md  why-ase-is-critical.md
docs/assets/: README.md
docs/case-studies/: README.md  langgraph-wrong-record.md  openai-prompt-regression.md  pydantic-approval-gate.md
examples/customer-support/: agent.py
examples/instrumented-python/: agent.py  scenario.yaml
examples/langgraph-python/: agent.py  manifest.yaml  scenario.yaml
examples/mcp-python/: README.md  agent.py  manifest.yaml  requirements.txt  scenario.yaml
examples/openai-agents-python/: agent.py  manifest.yaml  scenario.yaml
examples/openai-agents-typescript/: README.md  agent.ts  manifest.yaml  package-lock.json  package.json  scenario.yaml
examples/pydantic-ai-python/: agent.py  manifest.yaml  scenario.yaml
schemas/: ase_conformance_manifest.schema.json  ase_conformance_result.schema.json  ase_scenario.schema.json
scripts/: bootstrap_upstream_validations.py  generate_compatibility_matrix.py  materialize_recovery_pyc.py  prerelease_check.sh  run_upstream_openai_agents_js.py
src/ase/: __init__.py  errors.py  examples_matrix.py
tests/integration/: test_framework_examples.py
tests/unit/: test_artifacts_bundle.py  test_baseline_cmd.py  test_case_study_layout.py  test_cli_errors.py  test_compare_trajectory.py  test_conformance_matrix.py  test_correctness_evaluators.py  test_database_edge_cases.py  test_efficiency.py  test_efficiency_evaluators.py  test_efficiency_metrics.py  test_env_loader.py  test_examples_cmd.py  test_examples_matrix.py  test_history_cmd.py  (+11 more)
(+105 files in other folders)
